[package]
name = "locker"
version = "0.2.2"
description = "Created with Anchor"
edition = "2021"
authors = ["andrew <andrew@raccoons.dev>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "locker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
localnet = []
staging = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["event-cpi"] }
anchor-spl = "0.30.1"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics"] }
static_assertions = "1.1.0"
num_enum = "0.7.1"
arbitrary = { version = "1.3.2", features = ["derive"] }

[dev-dependencies]
proptest = "1.2.0"
