[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[[bin]]
name = "fuzz_1"
path = "fuzz_1/test_fuzz.rs"

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
honggfuzz = "0.5.56"
arbitrary = "1.3.0"
assert_matches = "1.4.0"
anchor-spl = "0.30.1"
static_assertions = "1.1.0"
num_enum = "0.7.1"
rand = "0.8.5"

[dependencies.bytemuck]
version = "1.13.1"
features = ["derive", "min_const_generics"]

[dependencies.trident-client]
version = "0.7.0"

[dependencies.locker]
path = "../../programs/locker"
